--- a/Zork/Zork.csproj
+++ b/Zork/Zork.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -14,5 +14,10 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Include="C:\Users\au896691\Documents\GitHub\Zork\Commands.cs" Link="Commands.cs" />
+    <Compile Include="C:\Users\au896691\Documents\GitHub\Zork\Program.cs" Link="Program.cs" />
+  </ItemGroup>
 
 </Project>
